# vykar

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  prek.toml  vykar.example.yaml
.agents/: settings.local.json
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  nix.yml  release.yml
.nix/: common.nix  devshell.nix  vykar-cli.nix  vykar-gui.nix  vykar-server.nix
crates/vykar-cli/: Cargo.toml
crates/vykar-cli/src/: cli.rs  config_gen.rs  dispatch.rs  error.rs  format.rs  hooks.rs  lib.rs  main.rs  passphrase.rs  progress.rs  prompt.rs  resolve.rs  signal.rs  table.rs
crates/vykar-cli/src/cmd/: backup.rs  break_lock.rs  check.rs  compact.rs  daemon.rs  delete.rs  info.rs  init.rs  list.rs  mod.rs  mount.rs  prune.rs  restore.rs  snapshot.rs
crates/vykar-cli/src/cmd/daemon/: http.rs  mod.rs  poll.rs  render.rs  status.rs
crates/vykar-cli/tests/: cli_integration.rs  memory_integration.rs
crates/vykar-common/: Cargo.toml
crates/vykar-core/: Cargo.toml
crates/vykar-core/src/: hooks.rs  lib.rs  limits.rs  prune.rs  testutil.rs
crates/vykar-core/src/app/: mod.rs  operations.rs  passphrase.rs  scheduler.rs
crates/vykar-core/src/chunker/: mod.rs
crates/vykar-core/src/commands/: check.rs  compact.rs  delete.rs  delete_repo.rs  diff.rs  find.rs  info.rs  init.rs  list.rs  mod.rs  mount.rs  prune.rs  restore.rs  snapshot_ops.rs  util.rs
crates/vykar-core/src/commands/backup/: chunk_process.rs  command_dump.rs  commit.rs  concurrency.rs  mod.rs  pipeline.rs  read_source.rs  sequential.rs  source.rs  walk.rs
crates/vykar-core/src/commands/backup/pipeline/: consumer.rs  mod.rs  segmentation.rs  test_support.rs  worker.rs
crates/vykar-core/src/commands/backup/walk/: inode_walk.rs  mod.rs
crates/vykar-core/src/commands/check/: repair_apply.rs  repair_plan.rs  runner.rs  scan.rs  server_verify.rs  types.rs
crates/vykar-core/src/commands/restore/: finalize.rs  mod.rs  parallel.rs  plan.rs  read_groups.rs  test_support.rs
crates/vykar-core/src/compress/: mod.rs
crates/vykar-core/src/config/: defaults.rs  deserialize.rs  hooks.rs  limits.rs  mod.rs  resolve.rs  sources.rs  types.rs  util.rs
crates/vykar-core/src/config/resolve/: discovery.rs  document.rs  env.rs  resolution.rs  template.rs  test_support.rs
crates/vykar-core/src/index/: dedup_cache.rs  mod.rs
crates/vykar-core/src/platform/: fs.rs  mod.rs  paths.rs  shell.rs
crates/vykar-core/src/repo/: chunks.rs  commit.rs  file_cache.rs  format.rs  lock.rs  manifest.rs  mod.rs  open.rs  pack.rs  read.rs  session.rs  snapshot_cache.rs  write_session.rs
crates/vykar-core/src/snapshot/: item.rs  mod.rs
crates/vykar-core/src/storage/: mod.rs
crates/vykar-core/src/tests/: app_ops.rs  backup_toctou.rs  check_command.rs  chunker.rs  compact.rs  delete.rs  delete_repo.rs  error_messages.rs  format.rs  helpers.rs  index.rs  info.rs  item.rs  lock.rs  lock_fence.rs  manifest.rs  mod.rs  passphrase.rs  proptest.rs  prune.rs  prune_command.rs  repair.rs  repo.rs  util_lock.rs
crates/vykar-core/tests/: integration.rs  lifecycle_integration.rs  single_file_source.rs  symlink_source.rs
crates/vykar-crypto/: Cargo.toml
crates/vykar-crypto/src/: aes_gcm.rs  chacha20_poly1305.rs  key.rs  lib.rs  select.rs
crates/vykar-gui/: Cargo.toml  build.rs
crates/vykar-gui/macos/: Info.plist  create-icns.sh
crates/vykar-gui/src/: bootstrap.rs  config_helpers.rs  event_consumer.rs  file_tree.rs  main.rs  messages.rs  progress.rs  repo_helpers.rs  scheduler.rs  state.rs  tray.rs  tray_state.rs  ui_state.rs  update_check.rs  view_models.rs  worker.rs
crates/vykar-gui/src/controllers/: diff.rs  find.rs  main_window.rs  mod.rs  password_dialog.rs  restore.rs
crates/vykar-gui/src/file_tree/: builder.rs  model.rs  path.rs  selection.rs  slint_model.rs  test_support.rs
crates/vykar-gui/src/worker/: actions.rs  backup.rs  config_cmds.rs  mod.rs  mount.rs  repo_info.rs  shared.rs
crates/vykar-gui/ui/: app.slint  diff.slint  find.slint  main-window.slint  password-dialog.slint  restore.slint
crates/vykar-gui/ui/components/: side_bar.slint  source_row.slint  types.slint
crates/vykar-gui/ui/pages/: advanced.slint  find.slint  log.slint  overview.slint  settings.slint  snapshots.slint  sources.slint  welcome.slint
crates/vykar-protocol/: Cargo.toml
crates/vykar-server/: Cargo.toml
crates/vykar-server/src/: config.rs  error.rs  main.rs  quota.rs  state.rs
crates/vykar-server/src/handlers/: admin.rs  locks.rs  mod.rs  objects.rs  test_helpers.rs
crates/vykar-server/src/handlers/admin/: batch_delete.rs  dispatch.rs  init.rs  list.rs  repack.rs  stats.rs  test_support.rs  verify_packs.rs  verify_structure.rs
crates/vykar-storage/: Cargo.toml
crates/vykar-storage/src/: http_util.rs  lib.rs  local_backend.rs  paths.rs  rest_backend.rs  retry.rs  runtime.rs  s3_backend.rs  sftp_backend.rs
crates/vykar-storage/src/s3_backend/: mod.rs  multipart.rs
crates/vykar-types/: Cargo.toml
crates/vykar-types/src/: chunk_id.rs  error.rs  lib.rs  pack_id.rs  snapshot_id.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  backends.md  backup.md  commands.md  configuration.md  daemon.md  goals.md  index.md  (+10 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generate_corpus.rs
scripts/: README.md  benchmark.sh  benchmark_report.py  build-release-windows.ps1  macos-sign.sh  mariadb-generate-random-data.sh  mongodb-generate-random-data.sh  postgres-generate-random-data.sh  profile.sh  stress.sh  windows-sign.sh
scripts/scenario-runner/: pyproject.toml
scripts/scenario-runner/scenario_runner/: __main__.py  cli.py  config.py  corpus.py  report.py  runner.py  verify.py  vykar.py
scripts/scenario-runner/scenarios/: 5xchurn.yaml  simple-backup.yaml
scripts/testbench/: pyproject.toml
scripts/testbench/tests/: test_bench_report.py  test_cli.py  test_config.py  test_corpus.py  test_report.py  test_runner.py  test_vykar.py
scripts/testbench/vykar_testbench/: bench_report.py  benchmarks.py  config.py  corpus.py  profiler.py  scenarios.py  stress.py  vykar.py
(+27 files in other folders)
