[workspace]
members = [
    "crates/vykar-types",
    "crates/vykar-crypto",
    "crates/vykar-storage",
    "crates/vykar-core",
    "crates/vykar-cli",
    "crates/vykar-server",
    "crates/vykar-gui",
    "crates/vykar-protocol",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
vykar-types = { path = "crates/vykar-types" }
vykar-crypto = { path = "crates/vykar-crypto" }
vykar-storage = { path = "crates/vykar-storage" }
vykar-core = { path = "crates/vykar-core" }
vykar-protocol = { path = "crates/vykar-protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Error handling
thiserror = "2"

# Crypto
blake2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
croner = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
crossbeam-channel = "0.5"
tokio = "1"

# Testing
tempfile = "3"
proptest = "1"

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = 2
strip = "none"
