[package]
name = "vykar-gui"
version = "0.11.6"
edition = "2021"
license = "GPL-3.0-only"

build = "build.rs"

[[bin]]
name = "vykar-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vykar-core.workspace = true
vykar-types.workspace = true
slint = { version = "1.13", default-features = true }
tray-icon = "0.21"
notify = "6.1"
crossbeam-channel.workspace = true
tinyfiledialogs = "3"
chrono.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
dunce = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
winresource = "0.1"
