[package]
name = "vykar-gui"
version = "0.12.5"
edition = "2021"
license = "GPL-3.0-only"

build = "build.rs"

[[bin]]
name = "vykar-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vykar-core.workspace = true
vykar-types.workspace = true
slint = { version = "1.13", default-features = true }
tray-icon = "0.21"
notify = "6.1"
crossbeam-channel.workspace = true
tinyfiledialogs = "3"
chrono.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
dunce = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }

[build-dependencies]
slint-build = "1.13"
winresource = "0.1"
