[package]
name = "vykar-gui"
version = "0.13.0"
edition = "2021"
license = "GPL-3.0-only"

build = "build.rs"

[[bin]]
name = "vykar-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vykar-core = { workspace = true, features = ["backend-sftp", "mount"] }
vykar-common.workspace = true
vykar-types.workspace = true
tokio = { workspace = true, features = ["sync"] }
opener = "0.8"
slint = { version = "1.15", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-skia", "accessibility"] }
tray-icon = "0.22"
crossbeam-channel.workspace = true
tinyfiledialogs = "3"
chrono.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
dunce = "1"
auto-launch = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSWindow"] }

[build-dependencies]
slint-build = "1.15"
winresource = "0.1"
