[package]
name = "vykar-server"
version = "0.12.12"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "vykar-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal
vykar-common.workspace = true
vykar-protocol.workspace = true

# Web framework
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }

# Time
chrono.workspace = true

# Crypto (constant-time compare for auth token)
subtle = "2"
blake2.workspace = true

# Streaming
futures-util = "0.3"

# Hex encoding
hex.workspace = true

# System calls (statvfs, quotactl)
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
