[package]
name = "vykar-storage"
version = "0.12.8"
edition = "2021"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
# Internal
vykar-types.workspace = true
vykar-protocol.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto (REST backend uses BLAKE2b for checksums)
blake2.workspace = true
hex.workspace = true
rand.workspace = true

# Content-MD5 for S3 Object Lock compatibility
md-5 = "0.10"
base64 = "0.22"

# URL parsing
url = "2"
percent-encoding = "2"

# HTTP client (S3 + REST backends)
rusty-s3 = "0.8"
ureq = { version = "2", features = ["json"] }

# Logging
tracing.workspace = true

# Filesystem
tempfile.workspace = true

# Async runtime (SFTP only)
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }

# SSH/SFTP
russh = { version = "0.54", default-features = false, features = ["aws-lc-rs"], optional = true }
russh-sftp = { version = "2.1", optional = true }

[features]
default = []
backend-sftp = ["russh", "russh-sftp", "tokio"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
