[package]
name = "vykar-types"
version = "0.12.5"
edition = "2021"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
# Crypto (ChunkId, PackId)
blake2.workspace = true

# Hex encoding
hex.workspace = true

# Random (SnapshotId)
rand.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true

# Error handling
thiserror.workspace = true
